objects/gvp__Expense_Line_Item_Association__c.object
<CustomObject>
    <description>Table that relates Planned Spend Expenses to Invoice Line Items, both of which use the Expense__c object.</description>
    <fields>
        <fullName>gvp__Invoice_Amount__c</fullName>
        <description>When linking Planned Spend Expenses to Invoice Line Items, this field contains the amount of the Invoice applied to the Planned Spend Expense.</description>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Invoice_Line_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Invoice Line Item</label>
        <referenceTo>gvp__Expense__c</referenceTo>
        <relationshipLabel>Invoice Line Item Associations (Invoice_Line_Item)</relationshipLabel>
        <relationshipName>Invoice_Line_Item_Associations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Planned_Spend_Expense__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Planned Spend Expense</label>
        <referenceTo>gvp__Expense__c</referenceTo>
        <relationshipLabel>Expense Line Item</relationshipLabel>
        <relationshipName>Expense_Line_Item</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Expense Line Item Association</label>
    <listViews>
        <fullName>gvp__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ELI-{000000}</displayFormat>
        <label>Expense Line Item Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Line Item Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>